* fixed bug: using bitevents to hover out * adding white space between classes * reordering styles: @includes always first, then top (most important) to bottom (least), grouping related * decoupling  styles * converting from pixels to ems where possible * grouping + re-ordering bit styles by base, bit type, state * larger heartbeat

--- a/meteor-app/client/components/bits/styles.scss
+++ b/meteor-app/client/components/bits/styles.scss
@@ -1,63 +1,62 @@
-$ui-header-height: 8px;
+$ui-header-height: 0.70em;
 
 .bit {
-  display: none; // hide bits by default. animation functions display them 
+  
+  display: none; // hide bits by default when map loads: animation functions display them 
   position: absolute;
   -webkit-font-smoothing: antialiased;
-}
+  
+  // ************** base ************    
+  .ui-widget-header {
+    display: none;
+    position: absolute;
+  }
 
-.bit .ui-widget-header {
-  position: absolute;
-  display: none;
-}
 
-.bit.hovered .ui-widget-header {
-  display: block;
-  top: -$ui-header-height;
-  height: $ui-header-height;
-  cursor: move;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #ccc;
-}
+  // ******** subclasses (type image, text) ************    
+  &.text {
+    padding: 0.1em;
+    background-color: white;
+  }
 
-.bit.editing .content,
-.bit.text .content {
-  background-color: #fff;
-  padding: 1em;
-}
+  &.editing .content,
+  &.text .content {
+    padding: 1em;
+    background-color: #fff;
+  }
 
-.bit.image .zoom a {
-  cursor: default;
-}
+  &.image img {
+    width: 200px;
+  }
 
-.bit img {
-  width: 200px;
-}
+  &.parallel {
+    background: #f0f0fa !important;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-weight: 800;
+    font-size: 0.75em;
+    text-transform: uppercase;
+  }
 
-.bit.text {
-  background-color: white;
-  padding: 0.1em;
-}
+  // ************ states ***********
+  &.hovering .ui-widget-header {
+    display: block;
+    top: -$ui-header-height;
+    height: $ui-header-height;
+    width: 100%;
+    background-color: #ccc;
+    cursor: move;
+  }
 
-.create-parallel--origin {
-  border: 0.4em solid yellow;
-}
+  &.create-parallel--origin { border: 0.4em solid yellow; }  
 
-.bit.parallel {
-  background: #f0f0fa !important;
-  font-family: 'Merriweather Sans', sans-serif;
-  font-weight: 800;
-  text-transform: uppercase;
-  font-size: 0.75em;
 }
 
 
 
-/*
-  file upload animation
-*/
+
+
+
+// file upload animation
 @mixin keyframes($name) {
   @-webkit-keyframes #{$name} {
     @content;
@@ -70,6 +69,7 @@ $ui-header-height: 8px;
   }
 }
 
+// TODO: use bourbon SASS functions here
 @mixin prefix($map, $vendors: webkit moz ms o) {
   @each $prop, $value in $map {
     @if $vendors {
@@ -85,136 +85,147 @@ $ui-header-height: 8px;
 @include keyframes(passing-through) {
 
   0% {
-    opacity: 0;
     @include prefix((transform: translateY(40px)));
+    opacity: 0;
   }
 
   30%, 70% {
-    opacity: 1;
     @include prefix((transform: translateY(0px)));
+    opacity: 1;
   }
 
   100% {
-    opacity: 0;
     @include prefix((transform: translateY(-40px)));
+    opacity: 0;
   }
 }
 
 @include keyframes(slide-in) {
 
   0% {
-    opacity: 0;
     @include prefix((transform: translateY(40px)));
+    opacity: 0;
   }
 
   30% {
-    opacity: 1;
     @include prefix((transform: translateY(0px)));
+    opacity: 1;
   }
 }
 
 @include keyframes(pulse) {
-
   0% { @include prefix((transform: scale(1))); }
   10% { @include prefix((transform: scale(1.1))); }
   20% { @include prefix((transform: scale(1))); }
 }
 
 .bit {
-  &.success .success-mark {
+  
+  .success .success-mark {
     @include prefix((animation: passing-through 3s cubic-bezier(0.770, 0.000, 0.175, 1.000)));
   }
-  &.error .error-mark {
-    opacity: 1;
+  
+  .error .error-mark {
     @include prefix((animation: slide-in 3s cubic-bezier(0.770, 0.000, 0.175, 1.000)));
+    opacity: 1;
   }
+  
   .success-mark, .error-mark {
-    pointer-events: none;
+    display: block;
+    position: absolute;
     opacity: 0;
     z-index: 500;
-    position: absolute;
-    display: block;
     top: 50%;
     left: 50%;
-    margin-left: -27px;
-    margin-top: -27px;
+    margin-left: -3em;
+    margin-top: -3em;
+    pointer-events: none;
   }
+  
   .success-mark svg, .error-mark svg {
     display: block;
-    width: 54px;
-    height: 54px;
+    width: 3em;
+    height: 3em;
   }
-  &.processing .progress {
-    opacity: 1;
+  
+  .processing .progress {
     @include prefix((transition: all 0.2s linear));
+    opacity: 1;
   }
-  &.complete .progress {
-    opacity: 0;
+  
+  .complete .progress {
     @include prefix((transition: opacity 0.4s ease-in));
+    opacity: 0;
   }
-  &:not(.processing) .progress {
+
+  :not(.processing) .progress {
     @include prefix((animation: pulse 6s ease infinite));
   }
   .progress {
+    position: absolute;
+    overflow: hidden;
     opacity: 1;
     z-index: 1000;
-    pointer-events: none;
-    position: absolute;
-    height: 16px;
-    left: 50%;
-    top: 50%;
-    margin-top: -8px;
-    width: 80px;
-    margin-left: -40px;
-    background: rgba(255, 255, 255, 0.9);
     -webkit-transform: scale(1);
-    border-radius: 8px;
-    overflow: hidden;
+    height: 1em;
+    width: 5em;
+    top: 50%;
+    left: 50%;
+    margin-top: -0.75em;
+    margin-left: -3.5em;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 0.5em;
+    pointer-events: none;
+    
     .upload {
-      background: #333;
-      background: linear-gradient(to bottom, #666, #444);
+      @include prefix((transition: width 300ms ease-in-out));
       position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
       width: 0;
-      @include prefix((transition: width 300ms ease-in-out));
+      background: linear-gradient(to bottom, #666, #444);
+      background: #333;
     }
   }
-  &.error {
+
+  .error {
     .error-message {
       display: block;
     }
+
     &:hover .error-message {
       opacity: 1;
       pointer-events: auto;
     }
   }
+
   .error-message {
-    text-align: center;
-    pointer-events: none;
-    z-index: 1000;
+    @include prefix((transition: opacity 0.3s ease));
+
     position: absolute;
     display: none;
+    z-index: 1000;
     opacity: 0;
-    @include prefix((transition: opacity 0.3s ease));
-    font-size: 13px;
     top: 100%;
     width: 100%;
-    background: #be2626;
-    background: linear-gradient(to bottom, #be2626, #a92222);
     padding: 0.5em 1.2em;
+    background: linear-gradient(to bottom, #be2626, #a92222);
+    background: #be2626;
     color: white;
+    text-align: center;
+    pointer-events: none;
+    
     &:after {
-      content: '';
       position: absolute;
-      top: -6px;
+      content: '';
+      top: 0.4em;
       left: 50%;
       width: 0;
       height: 0;
-      border-left: 6px solid transparent;
-      border-right: 6px solid transparent;
-      border-bottom: 6px solid #be2626;
+      border-left: 0.4em solid transparent;
+      border-right: 0.4em solid transparent;
+      border-bottom: 0.4em solid #be2626;
     }
   }
 }
@@ -232,7 +243,7 @@ $ui-header-height: 8px;
 
 // @-webkit-keyframes march-up {
 //   from {
-//     background-position-y: 8px;
+//     background-position-y: 0.6em;
 //   }
 //   to {
 //     background-position-y: 0;
