--- a/meteor-app/client/layout/layout.scss
+++ b/meteor-app/client/layout/layout.scss
@@ -19,7 +19,5 @@ body {
   position:relative;
 }
 
-strong { 
-  font-weight: 700;  
-}
-
+strong, b   { font-weight: 700; }
+a           { color: #6B6B6B; }
